syntax = "proto3";

package protocol;

import "google/protobuf/empty.proto";

service SSMgrSlave {
    rpc Allocate(AllocateRequest) returns (google.protobuf.Empty) {}
    rpc Free(FreeRequest) returns (google.protobuf.Empty) {}
    rpc GetStats(google.protobuf.Empty) returns (Statistics) {}
}

message AllocateRequest {
    int32 port = 1;
    string password = 2;
    string method = 3;
}

message FreeRequest {
    int32 port = 1;
}

message FlowUnit {
    int64 traffic = 1;
    int64 start_time = 2;
}

message Statistics {
    map<int32, FlowUnit> flow = 1;
}
